# anzar-cli

./: .gitignore  .gitlab-ci.yml  .goreleaser.yaml  Cargo.toml  Makefile  README.md  dist-workspace.toml  release.toml
src/: error.rs  main.rs  theme.rs
src/commands/: check.rs  generate.rs  init.rs  migrate.rs  mod.rs  status.rs  support.rs
src/commands/migrate/: run.rs
src/dialoger/: cache.rs  database.rs  strategy.rs
src/models/: cache.rs  configuration.rs  database.rs  mod.rs  strategy.rs
src/shared/: configuration.rs  constants.rs  mod.rs  support.rs
src/templates/: compose.conf.yml  compose.yml  configuration.yml
src/templates/auth/: jwt.yml  session.yml
src/templates/compose/: memcached.yml  mongo.yml  postgres.yml  redis.yml
src/templates/db/: mongo_compose.yml  sqlite_compose.yml
src/templates/db/postgres/: create_accounts.sql  create_email_verification_tokens.sql  create_password_reset_tokens.sql  create_refresh_tokens.sql  create_sessions.sql  create_users.sql
src/templates/db/sqlite/: create_accounts.sql  create_email_verification_tokens.sql  create_password_reset_tokens.sql  create_refresh_tokens.sql  create_sessions.sql  create_users.sql
