[package]
edition = "2024"
rust-version = "1.85"

name = "anzar-cli"
description = "Anzar is a lightweight authentication and authorization framework that runs as a separate microservice"
readme = "README.md"
license = "GPL-3.0"
version = "0.1.0"
authors = ["Hakou Guelfen <hakoudev@gmail.com>"]
homepage = "https://anzar_software.gitlab.io/docs"
repository = "https://gitlab.com/anzar_software/cli"
categories = ["authentication", "web-programming", "network-programming"]
keywords = [
  "Software Development",
  "Authentication",
  "Authorization",
  "MicroService"
]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
console = "0.16.3"
dialoguer = "0.12.0"
owo-colors = "4.3.0"
