[package]
edition = "2024"
rust-version = "1.85"

name = "anzar"
description = "Anzar is a lightweight authentication and authorization framework that runs as a separate microservice"
readme = "README.md"
license = "GPL-3.0"
version = "0.4.2"
authors = ["Hakou Guelfen <hakoudev@gmail.com>"]
homepage = "https://anzar_software.gitlab.io/docs"
# repository = "https://gitlab.com/anzar_software/cli"
repository = "https://github.com/anzar-software/anzar-cli"

categories = ["authentication", "web-programming", "network-programming", "command-line-utilities"]
keywords = [
  "Authentication",
  "Authorization",
  "MicroService",
  "cli"
]

[dependencies]
# cli
clap = { version = "4.6.0", features = ["derive"] }
console = "0.16.3"
dialoguer = "0.12.0"
owo-colors = "4.3.0"

sqlx = { version = "0.8.6", features = ["sqlite", "postgres", "runtime-tokio", "uuid", "chrono", "json"] }

# Serde
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
minreq = "2.14.1"
chrono = "0.4.44"
thiserror = "2.0.18"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

